syntax = "proto3";

package api.v1;

import "api/v1/options.proto";
import "api/v1/shared.proto";

import "google/protobuf/field_mask.proto";

import "buf/validate/validate.proto";

service ExerciseService {
  rpc CreateExercise (CreateExerciseRequest) returns (CreateExerciseResponse) {
    option (auth) = true;
  }
  rpc GetExercise (GetExerciseRequest) returns (GetExerciseResponse) {
    option (auth) = true;
  }
  rpc UpdateExercise (UpdateExerciseRequest) returns (UpdateExerciseResponse) {
    option (auth) = true;
  }
  rpc DeleteExercise (DeleteExerciseRequest) returns (DeleteExerciseResponse) {
    option (auth) = true;
  }
  rpc ListExercises (ListExercisesRequest) returns (ListExercisesResponse) {
    option (auth) = true;
  }
  rpc GetPreviousWorkoutSets(GetPreviousWorkoutSetsRequest) returns (GetPreviousWorkoutSetsResponse) {
    option (auth) = true;
  }
  rpc GetPersonalBests (GetPersonalBestsRequest) returns (GetPersonalBestsResponse) {
    option (auth) = true;
  }
  rpc ListSets (ListSetsRequest) returns (ListSetsResponse) {
    option (auth) = true;
  }
}

message CreateExerciseRequest {
  string name = 1 [(buf.validate.field).string.min_len = 1];
  string label = 2;
}
message CreateExerciseResponse {
  string id = 1;
}

message GetExerciseRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}
message GetExerciseResponse {
  Exercise exercise = 1;
}

message UpdateExerciseRequest {
  Exercise exercise = 1 [(buf.validate.field).required = true];
  google.protobuf.FieldMask update_mask = 2;
}
message UpdateExerciseResponse {
  Exercise exercise = 1;
}

message DeleteExerciseRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}
message DeleteExerciseResponse {}

message ListExercisesRequest {
  string name = 1;
  repeated string exercise_ids = 2 [(buf.validate.field).repeated.items.string.uuid = true];
  PaginationRequest pagination = 3 [(buf.validate.field).required = true];
}
message ListExercisesResponse {
  repeated Exercise exercises = 1;
  PaginationResponse pagination = 2;
}

message GetPreviousWorkoutSetsRequest {
  repeated string exercise_ids = 1 [(buf.validate.field).repeated.items.string.uuid = true];
}
message GetPreviousWorkoutSetsResponse {
  repeated ExerciseSets exercise_sets = 1;
}

message GetPersonalBestsRequest {
  string user_id = 1 [(buf.validate.field).string.uuid = true];
}
message GetPersonalBestsResponse {
  repeated ExerciseSet personal_bests = 1;
}

message ListSetsRequest {
  string exercise_id = 1 [(buf.validate.field).string.uuid = true];
  PaginationRequest pagination = 2 [(buf.validate.field).required = true];
}
message ListSetsResponse {
  repeated Set sets = 1;
  PaginationResponse pagination = 2;
}
